--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
    <h1>My Library</h1>
   <button id="newBookBtn">+ New Book</button>
   <div id="book-container"></div>
+   <div id="user-section">
+  <input type="text" id="username-input" placeholder="Enter username" />
+  <button id="addUserBtn">Add User</button>
+  <button id="switchUserBtn">Switch User</button>
+  <p id="current-user">Current User: None</p>
+</div>
 
   <!-- Modal Form -->
   <dialog id="bookDialog">
